# map-matching-algorithm

./: .gitignore  README.md  TODO.md
datasets/: 14096329_1.json  14096444_1.json  14099164_1.json  9710356_1_valid.json  dump10.json  dump184.json
src/: test.cpp
src/building-map-index/: Makefile  build-grid-index.cpp  build_grid_index  common-struct.h  common.cpp  common.h  debug.h  error.h  logger.h  query_grid.cpp  test.cpp
src/iter-map-matching/: Makefile.am  common.cpp  config.h  config.h.in  configure.ac  iter_matcher.cpp  iter_matcher.h  test.cpp
src/map-index/: Makefile.am  common.h  configure.ac  error.h  gen_grid.cpp  gen_segs.cpp  grid_info  map_index.cpp  map_index.h  map_index_serve  query_grid.cpp  serve.cpp
src/robust-map-matching/: robust-map-matching.cpp
src/simple-map-matching/: Makefile.am  common.cpp  common.h  config.h  configure.ac  grid_info  iter_map_matcher  simple_map_matcher  simple_matcher.cpp  simple_matcher.h  test.cpp
tools/: Makefile  gen_distance_table.h  gen_grid.h  gen_segs.sh  short.sh  test.cpp
tools/bash/: gen_segs.sh
tools/bash/fix_road_network/: fix_road_network.sh
tools/bash/get_deviation/: deviation  fake.pos  get_deviation.sh  real.pos
tools/distill_position/: distill_position.php  num_list  test.json
tools/distill_roads/: distill_roads.php  road_list
tools/gen_distance_table/: Makefile  Makefile.am  Makefile.in  configure  configure.in  end_lng_table.txt  gen_distance_table.cpp  gen_distance_table.h  lat_table.txt  start_lng_table.txt
tools/gen_distance_table/.deps/: gen_distance_table.Po
tools/gen_grid/: Makefile.am  common.cpp  configure.ac  gen_grid.cpp  gen_grid.h  test.cpp
tools/gps_preprocess/: Makefile.am  common.cpp  common.h  config.h  configure.ac  gps_preprocess  gps_preprocess.cpp  gps_preprocess.h  test.cpp
tools/query_grid/: Makefile  Makefile.am  Makefile.in  common.cpp  config.status  configure  configure.ac  query_grid  query_grid.cpp  query_grid.h  test.cpp
tools/query_grid/.deps/: common.Po  query_grid.Po  test.Po
tools/query_grid/autom4te.cache/: output.1  requests  traces.0  traces.1
