AUTOMAKE_OPTIONS=foreign

bin_PROGRAMS=iter_map_matcher

iter_map_matcher_SOURCES=../../json/json.cc common.cpp ../map-index/gen_segs.cpp ../map-index/gen_grid.cpp ../map-index/query_grid.cpp ../map-index/map_index.cpp iter_matcher.cpp test.cpp

iter_map_matcher_LDADD=

iter_map_matcher_LDFLAGS=

iter_map_matcher_DEPENDENCIES=

AM_CXXFLAGS=-Wall -g -O0 -std=c++11

