AUTOMAKE_OPTIONS=foreign

bin_PROGRAMS=simple_map_matcher

simple_map_matcher_SOURCES=../../json/json.cc common.cpp ../map-index/gen_segs.cpp ../map-index/gen_grid.cpp ../map-index/query_grid.cpp ../map-index/map_index.cpp simple_matcher.cpp test.cpp

simple_map_matcher_LDADD=

simple_map_matcher_LDFLAGS=

simple_map_matcher_DEPENDENCIES=

AM_CXXFLAGS=-Wall -g -O0 -std=c++11

